# AI_kurs_gr2

./: README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: .gitignore  README.md  pyproject.toml
homeworks/HW04/eda-cli/: .gitignore  README.md  pyproject.toml
homeworks/HW04/eda-cli/src/eda_cli/: api.py  cli.py  core.py
homeworks/HW04/eda-cli/tests/: test_core.py
homeworks/HW05/: HW05.ipynb
