[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "HW03"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "typer>=0.20.1",
    "fastapi>=0.123.3",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.20",
]

[project.scripts]
eda-cli = "eda_cli.cli:app"
